--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="styles/cadastro.css">
+    <link rel="stylesheet" href="style/cadastro.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- Fonte Roboto Condensed Light -->
@@ -18,7 +18,7 @@
     <header class="row conteiner">
         <!-- Logo -->
         <div id=logo class="col-2">
-            <img src="img_cadastro/Logo.svg" alt="" width="130%">
+            <img src="img/Logo.svg" alt="" width="130%">
         </div>
     </header>
 
