--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -59,6 +59,8 @@
                 </section>
             </div>
 
+            <!-- <hr class="linha"> -->
+
                 <div id="direita" class="bloco">
                     <!-- Email -->
                     <section id="section2">
