--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <!-- Link CSS -->
     <link rel="stylesheet" href="style/cadastro.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Link Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Link JavaScript -->
+    <script src="script/script.js"></script>
 
     <!-- Fonte Roboto Condensed Light -->
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -25,7 +30,7 @@
     <main>
         <!-- Botão voltar -->
         <div id="voltar">
-            <div>
+            <div >
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="36" viewBox="0 0 42 46" fill="none">
                     <path d="M33 9.30834L29.9494 6.11292L13 23.9856L29.9666 41.8583L33 38.6629L19.0668 23.9856L33 9.30834Z" fill="white"/>
                     <path d="M43 9.19542L39.9494 6L23 23.8727L39.9666 41.7454L43 38.55L29.0668 23.8727L43 9.19542Z" fill="white"/>
@@ -40,26 +45,27 @@
                 <section id="section1">
                     <div>
                         <div><label class="roboto_condensed_bold padding">Nome</label></div>
-                        <input class="inputcadastro roboto_condensed_light"  type="text"id="inputnome" placeholder="Insira seu Nome"  size="40">
+                        <input class="inputcadastro roboto_condensed_light"  type="text" id="inputnome" placeholder="Insira seu Nome"  size="40" maxlength="80">
                       </div>
                 </section>
                 <!-- Senha -->
                 <section id="section3" class="margemup">
                     <div>
                         <div><label class="roboto_condensed_bold padding">Senha</label></div>
-                        <input class="inputcadastro roboto_condensed_light"  type="text"id="inputsenha" placeholder="Insira sua Senha"  size="40">
+                        <input class="inputcadastro roboto_condensed_light"  type="password" id="inputsenha" placeholder="Insira sua Senha"  size="40">
                       </div>
                 </section>
                 <!-- Endereço -->
                 <section id="section5" class="margemup">
                     <div>
                         <div><label class="roboto_condensed_bold padding">Endereço</label></div>
-                        <input class="inputcadastro roboto_condensed_light"  type="text"id="inputendereço" placeholder="Insira seu Endereço"  size="40">
+                        <input class="inputcadastro roboto_condensed_light"  type="text"id="inputendereco" placeholder="Insira seu Endereço"  size="40">
                       </div>
                 </section>
             </div>
 
-            <!-- <hr class="linha"> -->
+            <!-- Linha divisória -->
+            <hr class="linha">
 
                 <div id="direita" class="bloco">
                     <!-- Email -->
@@ -74,7 +80,7 @@
                     <section id="section4" class="margemup">
                         <div>
                             <div><label class="roboto_condensed_bold padding">Confirmar senha</label></div>
-                            <input class="inputcadastro roboto_condensed_light"  type="text" id="inputconfirmar" placeholder="Confirme sua senha"  size="20">
+                            <input class="inputcadastro roboto_condensed_light"  type="password" id="inputconfirmar" placeholder="Confirme sua senha"  size="20">
                           </div>
                     </section>
                 
@@ -82,7 +88,7 @@
                     <section id="section6" class="margemup">
                         <div>
                             <div><label class="roboto_condensed_bold padding">Telefone</label></div>
-                            <input class="inputcadastro roboto_condensed_light"  type="text" id="inputtelefone" placeholder="Insira seu Telefone/Celular" size="20">
+                            <input class="inputcadastro roboto_condensed_light"  type="number" id="inputtelefone" placeholder="Insira seu Telefone/Celular" size="20">
                           </div>
                     </section>
                 </div>
@@ -91,7 +97,7 @@
 
         <!-- Botão -->
         <div>
-            <button class="button" type="button">Cadastrar</button>
+            <button class="button" type="button" onclick="fazerCadastro()">Cadastrar</button>
         </div>
     </main>
 
