--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -52,7 +52,7 @@
                 <section id="section3" class="margemup">
                     <div>
                         <div><label class="roboto_condensed_bold padding">Senha</label></div>
-                        <input class="inputcadastro roboto_condensed_light"  type="password" id="inputsenha" placeholder="Insira sua Senha"  size="40">
+                        <input class="inputcadastro roboto_condensed_light"  type="password" id="inputsenha" placeholder="Insira sua Senha"  size="40" minlength="8" required>
                       </div>
                 </section>
                 <!-- Endereço -->
@@ -80,7 +80,7 @@
                     <section id="section4" class="margemup">
                         <div>
                             <div><label class="roboto_condensed_bold padding">Confirmar senha</label></div>
-                            <input class="inputcadastro roboto_condensed_light"  type="password" id="inputconfirmar" placeholder="Confirme sua senha"  size="20">
+                            <input class="inputcadastro roboto_condensed_light"  type="password" id="inputconfirmar" placeholder="Confirme sua senha"  size="20" minlength="8" required>
                           </div>
                     </section>
                 
