--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -29,15 +29,17 @@
 
     <main>
         <!-- Botão voltar -->
-        <div id="voltar">
-            <div >
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="36" viewBox="0 0 42 46" fill="none">
-                    <path d="M33 9.30834L29.9494 6.11292L13 23.9856L29.9666 41.8583L33 38.6629L19.0668 23.9856L33 9.30834Z" fill="white"/>
-                    <path d="M43 9.19542L39.9494 6L23 23.8727L39.9666 41.7454L43 38.55L29.0668 23.8727L43 9.19542Z" fill="white"/>
-                </svg>
+        <a href="#" class="link">
+            <div id="voltar">
+                <div >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="36" viewBox="0 0 42 46" fill="none">
+                        <path d="M33 9.30834L29.9494 6.11292L13 23.9856L29.9666 41.8583L33 38.6629L19.0668 23.9856L33 9.30834Z" fill="white"/>
+                        <path d="M43 9.19542L39.9494 6L23 23.8727L39.9666 41.7454L43 38.55L29.0668 23.8727L43 9.19542Z" fill="white"/>
+                    </svg>
+                </div>
+                <p class="roboto_condensed_bold">voltar</p>
             </div>
-            <p class="roboto_condensed_bold">voltar</p>
-        </div>
+        </a>
         
         <div id="divisao">
             <div id="esquerda" class="bloco">
@@ -88,7 +90,7 @@
                     <section id="section6" class="margemup">
                         <div>
                             <div><label class="roboto_condensed_bold padding">Telefone</label></div>
-                            <input class="inputcadastro roboto_condensed_light"  type="number" id="inputtelefone" placeholder="Insira seu Telefone/Celular" size="20">
+                            <input class="inputcadastro roboto_condensed_light"  type="tel" id="inputtelefone" placeholder="Insira seu Telefone/Celular" size="20">
                           </div>
                     </section>
                 </div>
