trabalhando na navbar e na navegação entre as páginas

--- a/pages/assinatura.html
+++ b/pages/assinatura.html
@@ -21,10 +21,7 @@
       /></a>
       <ul id="links-container">
         <li>
-          <a
-            href="../homePage.html"
-            class="nav-link active"
-            data-value="homePage"
+          <a href="/index.html" class="nav-link active" data-value="homePage"
             >Cardapio</a
           >
         </li>
