--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,15 +15,12 @@
   <body onload="pageCheck('blog')">
     <nav>
       <div id="hamburguer-menu">Hamburguer</div>
-      <a href="../homePage.html"
+      <a href="/index.html"
         ><img src="../imgs/logo-nav.svg" alt="logo nafeira" id="logo-nav"
       /></a>
       <ul id="links-container">
         <li>
-          <a
-            href="../homePage.html"
-            class="nav-link active"
-            data-value="homePage"
+          <a href="/index.html" class="nav-link active" data-value="homePage"
             >Cardapio</a
           >
         </li>
