--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,14 +15,12 @@
   <body onload="pageCheck('blog')">
     <nav>
       <div id="hamburguer-menu">Hamburguer</div>
-      <a href="/index.html"
+      <a href="/"
         ><img src="../imgs/logo-nav.svg" alt="logo nafeira" id="logo-nav"
       /></a>
       <ul id="links-container">
         <li>
-          <a href="/index.html" class="nav-link active" data-value="homePage"
-            >Cardapio</a
-          >
+          <a href="/" class="nav-link active" data-value="homePage">Cardapio</a>
         </li>
         <li>
           <a class="nav-link" href="./assinatura.html" data-value="assinatura"
