trabalhando na navbar e na navegação entre as páginas

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,12 +15,14 @@
   <body onload="pageCheck('blog')">
     <nav>
       <div id="hamburguer-menu">Hamburguer</div>
-      <a href="/"
+      <a href="../index.html"
         ><img src="../imgs/logo-nav.svg" alt="logo nafeira" id="logo-nav"
       /></a>
       <ul id="links-container">
         <li>
-          <a href="/" class="nav-link active" data-value="homePage">Cardapio</a>
+          <a href="../index.html" class="nav-link active" data-value="homePage"
+            >Cardapio</a
+          >
         </li>
         <li>
           <a class="nav-link" href="./assinatura.html" data-value="assinatura"
