--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <body onload="pageCheck()">
     <nav>
       <div id="hamburguer-menu">Hamburguer</div>
-      <a href="./homePage.html"
+      <a href="/index.html"
         ><img src="./imgs/logo-nav.svg" alt="logo nafeira" id="logo-nav"
       /></a>
       <ul id="links-container">
         <li>
-          <a href="./homePage.html" class="nav-link" data-value="index.html"
+          <a href="/index.html" class="nav-link" data-value="index.html"
             >Cardapio</a
           >
         </li>
