trabalhando na navbar e na navegação entre as páginas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       /></a>
       <ul id="links-container">
         <li>
-          <a href="./index.html" class="nav-link" data-value="index.html"
+          <a href="./index.html" class="nav-link" data-value="index"
             >Cardapio</a
           >
         </li>
