--- a/pages/assinatura.html
+++ b/pages/assinatura.html
@@ -21,7 +21,7 @@
       /></a>
       <ul id="links-container">
         <li>
-          <a href="../index.html" class="nav-link active" data-value="homePage"
+          <a href="../index.html" class="nav-link active" data-value="index"
             >Cardapio</a
           >
         </li>
