--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,7 @@
       /></a>
       <ul id="links-container">
         <li>
-          <a href="../index.html" class="nav-link active" data-value="homePage"
+          <a href="../index.html" class="nav-link active" data-value="index"
             >Cardapio</a
           >
         </li>
