--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link JavaScript -->
-    <script src="script/script.js"></script>
+    <script src="script/script.js" defer></script>
 
     <!-- Fonte Roboto Condensed Light -->
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto+Condensed:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
