navegação das páginas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       type="image/x-icon"
     />
   </head>
-  <body onload="pageCheck()">
+  <body om onload="pageCheck()">
     <nav>
       <div id="hamburguer-menu">Hamburguer</div>
       <a href="./index.html"
