--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -99,7 +99,7 @@
 
         <!-- Botão -->
         <div>
-            <button class="button" type="button" onclick="fazerCadastro()">Cadastrar</button>
+            <button class="button" type="button">Cadastrar</button>
         </div>
     </main>
 
