--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -17,6 +17,7 @@
     <!-- Fonte Roboto Condesed Bold -->
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto+Condensed:wght@700&family=Roboto:wght@100&display=swap" rel="stylesheet">
     
+    <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- cabeçalho -->
