--- a/index.html
+++ b/index.html
@@ -3,44 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NAFEIRA - Home</title>
-    <link rel="stylesheet" href="./styles/homePage.css" />
-    <script src="./scripts/pageCheck.js" defer></script>
-    <link rel="stylesheet" href="./styles/nav.css" />
-    <link
-      rel="shortcut icon"
-      href="./imgs/icons/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="./style/comum.css" />
+    <link rel="stylesheet" href="./style/nav.css" />
+    <title>NaFeira</title>
   </head>
-  <body om onload="pageCheck()">
+  <body>
     <nav>
-      <div id="hamburguer-menu">Hamburguer</div>
-      <a href="./index.html"
-        ><img src="./imgs/logo-nav.svg" alt="logo nafeira" id="logo-nav"
-      /></a>
-      <ul id="links-container">
-        <li>
-          <a href="./index.html" class="nav-link" data-value="index"
-            >Cardapio</a
-          >
-        </li>
-        <li>
-          <a
-            class="nav-link"
-            href="./pages/assinatura.html"
-            data-value="assinatura"
-            >Assinatura</a
-          >
-        </li>
-        <li>
-          <a class="nav-link" href="/pages/blog.html" data-value="blog">Blog</a>
-        </li>
+      <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
+      <ul id="links-list">
+        <li>Home</li>
+        <li>Cardapio</li>
+        <li>Blog</li>
+        <li>Carrinho</li>
       </ul>
       <div id="buttons-container">
-        <a class="button" href="./pages/cadastro.html">Criar conta</a>
-        <a class="button" href="./pages/createAccount.html">Entrar</a>
+        <button id="create-btn" class="nav-btn">Criar conta</button>
+        <button id="entrar-btn " class="nav-btn primary-btn">Entrar</button>
+      </div>
+      <div id="icons-container">
+        <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/cardapio-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/pedidos-icon.svg" alt="" class="nav-icon" />
       </div>
     </nav>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
