nav e footer responsividade teste

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Styles -->
     <link rel="stylesheet" href="./style/comum.css" />
     <link rel="stylesheet" href="./style/nav.css" />
+    <link rel="stylesheet" href="./style/footer.css" />
+    <link rel="stylesheet" href="./style/main.css" />
+    <!-- Styles -->
+
     <title>NaFeira</title>
   </head>
   <body>
@@ -28,6 +34,35 @@
       </div>
     </nav>
     <main></main>
-    <footer></footer>
+    <footer>
+      <div id="social-media-container">
+        <h2>Redes Sociais</h2>
+        <div id="media-box">
+          <a href="https://www.instagram.com/" target="_blank">
+            <img src="./imgs/icons/instagram-icon.svg" alt="icone instagram" />
+            <p class="media-text">instagram.com/na-feira</p>
+          </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="./imgs/icons/facebook-icon.svg" alt="icone instagram" />
+            <p class="media-text">facebook.com/nafeira</p>
+          </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="./imgs/icons/email-icon.svg" alt="icone instagram" />
+            <p class="media-text">nafeira@email.com</p>
+          </a>
+        </div>
+      </div>
+      <div id="info-container">
+        <h2>Informações</h2>
+        <div id="container-textos">
+          <p>NaFeira LTDA - CNPJ: 21.261.413/0001-08</p>
+          <p>
+            Endereço - AV. Dr. Américo Figueiredo, 666 - Jd Simus, Sorocaba -
+            SP, 18052 - 530
+          </p>
+          <p>NaFeira LTDA - CNPJ: 21.261.413/0001-08</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
