--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="./style/main.css" />
     <!-- Styles -->
 
+    <!-- Scripts -->
+    <script type="module" src="./scripts/script.js" defer></script>
+    <!-- Scripts -->
+
     <title>NaFeira</title>
   </head>
   <body>
@@ -27,13 +31,15 @@
         <button id="entrar-btn " class="nav-btn primary-btn">Entrar</button>
       </div>
       <div id="icons-container">
-        <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon ativo" />
         <img src="./imgs/icons/cardapio-icon.svg" alt="" class="nav-icon" />
         <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
         <img src="./imgs/icons/pedidos-icon.svg" alt="" class="nav-icon" />
       </div>
     </nav>
-    <main></main>
+    <main>
+      <div id="page-home"></div>
+    </main>
     <footer>
       <div id="social-media-container">
         <h2>Redes Sociais</h2>
