--- a/blog.html
+++ b/blog.html
@@ -21,13 +21,13 @@
     <nav>
       <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
       <ul id="links-list">
-        <li class="nav-link ativo">
+        <li class="nav-link">
           <a href="/index.html">Home</a>
         </li>
         <li class="nav-link">
           <a href="/cardapio.html">Cardapio</a>
         </li>
-        <li class="nav-link">
+        <li class="nav-link ativo">
           <a href="/blog.html">Blog</a>
         </li>
         <li class="nav-link">Carrinho</li>
@@ -38,7 +38,7 @@
       </div>
       <div id="icons-container">
         <a href="/index.html">
-          <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon ativo" />
+          <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon" />
         </a>
 
         <a href="/cardapio.html">
@@ -46,7 +46,11 @@
         </a>
 
         <a href="/blog.html">
-          <img src="./imgs/icons/pedidos-icon.svg" alt="" class="nav-icon" />
+          <img
+            src="./imgs/icons/pedidos-icon.svg"
+            alt=""
+            class="nav-icon ativo"
+          />
         </a>
 
         <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
