--- a/cardapio.html
+++ b/cardapio.html
@@ -21,10 +21,10 @@
     <nav>
       <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
       <ul id="links-list">
-        <li class="nav-link ativo">
+        <li class="nav-link">
           <a href="/index.html">Home</a>
         </li>
-        <li class="nav-link">
+        <li class="nav-link ativo">
           <a href="/cardapio.html">Cardapio</a>
         </li>
         <li class="nav-link">
@@ -38,11 +38,15 @@
       </div>
       <div id="icons-container">
         <a href="/index.html">
-          <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon ativo" />
+          <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon" />
         </a>
 
         <a href="/cardapio.html">
-          <img src="./imgs/icons/cardapio-icon.svg" alt="" class="nav-icon" />
+          <img
+            src="./imgs/icons/cardapio-icon.svg"
+            alt=""
+            class="nav-icon ativo"
+          />
         </a>
 
         <a href="/blog.html">
