--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
       <ul id="links-list">
         <li class="nav-link ativo">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
         <li class="nav-link">
-          <a href="/cardapio.html">Cardapio</a>
+          <a href="./cardapio.html">Cardapio</a>
         </li>
         <li class="nav-link">
-          <a href="/blog.html">Blog</a>
+          <a href="./blog.html">Blog</a>
         </li>
         <li class="nav-link">Carrinho</li>
       </ul>
@@ -37,15 +37,15 @@
         <button id="entrar-btn " class="nav-btn primary-btn">Entrar</button>
       </div>
       <div id="icons-container">
-        <a href="/index.html">
+        <a href="./index.html">
           <img src="./imgs/icons/home-icon.svg" alt="" class="nav-icon ativo" />
         </a>
 
-        <a href="/cardapio.html">
+        <a href="./cardapio.html">
           <img src="./imgs/icons/cardapio-icon.svg" alt="" class="nav-icon" />
         </a>
 
-        <a href="/blog.html">
+        <a href="./blog.html">
           <img src="./imgs/icons/pedidos-icon.svg" alt="" class="nav-icon" />
         </a>
 
