--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/comum.css" />
     <link rel="stylesheet" href="./style/nav.css" />
     <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/blog.css" />
     <!-- Styles -->
 
     <!-- Scripts -->
