--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/comum.css" />
     <link rel="stylesheet" href="./style/nav.css" />
     <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/homePage.css" />
     <!-- Styles -->
 
     <!-- Scripts -->
@@ -52,7 +52,23 @@
         <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
       </div>
     </nav>
-    <main id="main"></main>
+    <main id="main">
+      <div id="container-pesquisa">
+        <p>O que você está procurando?</p>
+        <input type="text" placeholder="" />
+      </div>
+      <div id="home-page">
+        <div id="container-promocao-semana">
+          <p class="container-title">Promoção da semana</p>
+          <div class="texto">Cesta completa NAFEIRA</div>
+          <button>Eu quero</button>
+        </div>
+        <div id="container-sugestoes-chef">
+          <p class="container-title">Sugestão do Chef</p>
+          <div class="container-cards-produtos"></div>
+        </div>
+      </div>
+    </main>
     <footer>
       <div id="social-media-container">
         <h2>Redes Sociais</h2>
