--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main id="main">
       <div id="container-pesquisa">
         <p>O que você está procurando?</p>
-        <input type="text" placeholder="" />
+        <input type="text" placeholder="Digite o produto desejado" />
       </div>
       <div id="home-page">
         <div id="container-promocao-semana">
@@ -64,8 +64,69 @@
           <button>Eu quero</button>
         </div>
         <div id="container-sugestoes-chef">
-          <p class="container-title">Sugestão do Chef</p>
-          <div class="container-cards-produtos"></div>
+          <p class="container-title">Sugestões do Chef</p>
+          <div class="container-cards-produtos">
+            <div class="product-card">
+              <div class="product-img"></div>
+              <div class="product-details">
+                <p class="product-name">Repolho</p>
+                <div class="wrapper">
+                  <p class="sub-name">Repolho Crespo</p>
+                  <p class="product-price">R$ 7,90</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img batata"></div>
+              <div class="product-details">
+                <p class="product-name">Batata</p>
+                <div class="wrapper">
+                  <p class="sub-name">Batata inglesa</p>
+                  <p class="product-price">R$ 6,59 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img abobrinha"></div>
+              <div class="product-details">
+                <p class="product-name">Abobrinha</p>
+                <div class="wrapper">
+                  <p class="sub-name">Abobrinha brasileira</p>
+                  <p class="product-price">R$ 4,90 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img cenoura"></div>
+              <div class="product-details">
+                <p class="product-name">Cenoura</p>
+                <div class="wrapper">
+                  <p class="sub-name">Cenoura Nante</p>
+                  <p class="product-price">R$ 2,59 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img milho"></div>
+              <div class="product-details">
+                <p class="product-name">Milho</p>
+                <div class="wrapper">
+                  <p class="sub-name">Milho verde</p>
+                  <p class="product-price">R$ 7,90 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img alho"></div>
+              <div class="product-details">
+                <p class="product-name">Alho</p>
+                <div class="wrapper">
+                  <p class="sub-name">Alho Espanta Vampiro</p>
+                  <p class="product-price">R$ 19,90 kg</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
