teste tela inicial

--- a/index.html
+++ b/index.html
@@ -54,8 +54,93 @@
     </nav>
     <main id="main">
       <div class="banner-container"></div>
-      <div class="funciomaneto-container"></div>
-      <div class="planos-container"></div>
+      <div class="funcionamento-container">
+        <h2>Como funciona ?</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sit eius
+          quam dolorem. Autem commodi nobis deserunt. Neque eveniet nesciunt
+          libero eum praesentium nostrum dolor saepe voluptate iusto delectus
+          laborum minima nihil possimus velit, ratione aliquam, odit corporis
+          soluta quas. Eum repellat, rem adipisci ex eos ea provident dolore
+          sunt accusantium. Corporis, ducimus iste dignissimos consequatur saepe
+          molestias quis expedita suscipit nihil ut, velit quidem tenetur
+          similique quaerat porro maxime.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          nemo animi inventore itaque quos. Officiis, dolorum rerum, ut
+          exercitationem fugit laboriosam temporibus ea provident dolores qui
+          architecto quibusdam accusantium hic, vel at corrupti similique. Iste
+          officiis earum dolores vero necessitatibus minus inventore excepturi
+          fugit nobis, repellendus molestias deleniti sapiente aperiam accusamus
+          error quas! Ex consequuntur iusto deserunt distinctio et, eius
+          reprehenderit? Quam culpa, consequuntur provident aspernatur sit illum
+          excepturi delectus.
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima esse
+          sequi quos quisquam blanditiis consequuntur aperiam distinctio ipsum
+          minus libero expedita iste natus deleniti totam vero possimus
+          similique tempore, ex quibusdam suscipit cum commodi eius iure alias!
+          Deleniti esse qui nisi laboriosam dolore eius? Rem repellendus harum
+          maiores nemo cupiditate iure ducimus laboriosam facilis, dolorem autem
+          nesciunt a id. Incidunt ipsa, quae perspiciatis distinctio libero
+          ipsam at vero delectus? Ducimus.
+        </p>
+      </div>
+      <div class="planos-container">
+        <h2>Planos</h2>
+        <div class="cards-container">
+          <div class="card-plano">
+            <p class="card-title">Pequeno</p>
+            <img src="/imgs/icons/pequeno.svg" alt="" class="card-icon" />
+            <ul class="card-list">
+              <li>
+                <p><span>Serve: </span>2 pessoas</p>
+              </li>
+              <li>
+                <p><span>Contém: </span>9 produtos</p>
+              </li>
+              <li>
+                <p><span>Economia: </span>R$ 30,00</p>
+              </li>
+            </ul>
+            <button class="card-button">Comprar</button>
+          </div>
+          <div class="card-plano">
+            <p class="card-title">Medio</p>
+            <img src="/imgs/icons/medio.svg" alt="" class="card-icon" />
+            <ul class="card-list">
+              <li>
+                <p><span>Serve: </span>4 pessoas</p>
+              </li>
+              <li>
+                <p><span>Contém: </span>14 produtos</p>
+              </li>
+              <li>
+                <p><span>Economia: </span>R$ 40,00</p>
+              </li>
+            </ul>
+            <button class="card-button">Comprar</button>
+          </div>
+          <div class="card-plano">
+            <p class="card-title">Pequeno</p>
+            <img src="/imgs/icons/grande.svg" alt="" class="card-icon" />
+            <ul class="card-list">
+              <li>
+                <p><span>Serve: </span>6 pessoas</p>
+              </li>
+              <li>
+                <p><span>Contém: </span>20 produtos</p>
+              </li>
+              <li>
+                <p><span>Economia: </span>R$ 50,00</p>
+              </li>
+            </ul>
+            <button class="card-button">Comprar</button>
+          </div>
+        </div>
+      </div>
       <div class="reviews-container"></div>
     </main>
     <footer>
