--- a/cardapio.html
+++ b/cardapio.html
@@ -68,7 +68,7 @@
           <button>Eu quero</button>
         </div>
         <div id="container-sugestoes-chef">
-          <p class="container-title">Sugestões do Chef</p>
+          <p class="container-title">Produtos</p>
           <div class="container-cards-produtos">
             <div class="product-card">
               <div class="product-img"></div>
