--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <button class="card-button">Comprar</button>
           </div>
           <div class="card-plano">
-            <p class="card-title">Pequeno</p>
+            <p class="card-title">Grande</p>
             <img src="/imgs/icons/grande.svg" alt="" class="card-icon" />
             <ul class="card-list">
               <li>
