--- a/index.html
+++ b/index.html
@@ -141,7 +141,15 @@
           </div>
         </div>
       </div>
-      <div class="reviews-container"></div>
+      <div class="reviews-container">
+        <div class="review-card">
+          <div class="perfil-img"></div>
+          <div class="review-container">
+            <p class="review-text"></p>
+            <div class="rating-container"></div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div id="social-media-container">
