--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </p>
       </div>
       <div class="planos-container">
-        <h2>Planos</h2>
+        <h2>Cestas</h2>
         <div class="cards-container">
           <div class="card-plano">
             <p class="card-title">Pequeno</p>
